tests/invalid/multiple_assignment_targets/main.py
x: int = 0
y: int = 0
x = y = 5
